# device-agnostic-file-storage

./: .gitignore  pyproject.toml
src/akindness.device_agnostic_file_storage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/akindness/device_agnostic_file_storage/check/: all_check.py
src/akindness/device_agnostic_file_storage/check/part_level/: folder_structure.py  structure.py
src/akindness/device_agnostic_file_storage/remarkable/: authentication.py  check_rules.py  explore.py  explore_document_tree.py  readme.md  test_check_rules.py  test_explore_document_tree.py
src/akindness/device_agnostic_file_storage/util/graph/: structure.py  unique_multi_di_graph.py
src/akindness/device_agnostic_file_storage/validation/: all_validators.py  test_validate.py  validate.py
src/akindness/device_agnostic_file_storage/validation/character_level/: charset.py
